# rust-wasm-contract-template

./: Cargo.toml  build.sh
.cargo/: config
src/: lib.rs
